<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bacgraund_login"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sp30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sp60"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/sp30"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_es"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_spanish"
                        android:textColor="@color/white" />

                    <androidx.legacy.widget.Space
                        android:layout_width="@dimen/sp5"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btn_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_english"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/sp90"
                        android:layout_height="@dimen/sp90"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_logo" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/recover_account"
                        android:textColor="@color/background"
                        android:textSize="@dimen/sp20" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:layoutDirection="rtl"
                            android:paddingBottom="@dimen/sp10"
                            android:textColorHint="@color/text_login"
                            app:boxStrokeColor="@color/dark_greenish_blue"
                            app:endIconMode="none"
                            app:startIconDrawable="@drawable/ic_email">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/dark_greenish_blue"
                                android:textColorHint="@color/text_login" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/sp100"
                            android:background="@drawable/ic_btn_inactivo"
                            android:text="@string/send_information"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/write_your_email_correctly"
                            android:textColor="@color/background" />


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>

</layout>