<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.perfil.EditProfileFragment"
    android:padding="@dimen/sp30"
    android:id="@+id/container_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configure_profile"
                android:textColor="@color/background"
                android:layout_gravity="center"
                android:textSize="@dimen/sp25" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cambiar contraseña"
                android:textColor="@color/dark_greenish_blue"
                android:layout_gravity="center"
                android:textSize="@dimen/sp25"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_actual_pass"
                android:layoutDirection="rtl"
                android:paddingBottom="@dimen/sp10"
                android:textColorHint="@color/text_login"
                app:boxStrokeColor="@color/dark_greenish_blue"
                app:endIconMode="none"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_actual_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:gravity="center|left"
                    android:textColor="@color/dark_greenish_blue"
                    android:textColorHint="@color/text_login" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_indicate_your_new_password"
                android:layoutDirection="rtl"
                android:paddingBottom="@dimen/sp10"
                android:textColorHint="@color/text_login"
                app:boxStrokeColor="@color/dark_greenish_blue"
                app:endIconMode="none"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:gravity="center|left"
                    android:textColor="@color/dark_greenish_blue"
                    android:textColorHint="@color/text_login" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_repeat_your_new_password"
            android:layoutDirection="rtl"
            android:paddingBottom="@dimen/sp10"
            android:textColorHint="@color/text_login"
            app:boxStrokeColor="@color/dark_greenish_blue"
            app:endIconMode="none"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:gravity="center|left"
                android:textColor="@color/dark_greenish_blue"
                android:textColorHint="@color/text_login" />

        </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15sp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_password"
                    android:layout_gravity="center"
                    android:layout_marginRight="5sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/background"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sp10"
                    android:layout_weight="1"
                    android:background="@drawable/ic_btn_activo"
                    android:text="@string/text_to_return"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sp10"
                    android:layout_weight="1"
                    android:background="@drawable/ic_btn_activo"
                    android:text="@string/text_save"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</FrameLayout>